...
          tabBarIcon: ({ color, focused }) => <TabIcon name="house.fill" color={color} focused={focused} />,
        }}
      />
			<Tabs.Screen
        name="family"
        options={{
          title: 'Familia',
          tabBarIcon: ({ color, focused }) => <TabIcon name="person.3.fill" color={color} focused={focused} />,
        }}
      />
      <Tabs.Screen
        name="incoming-event"
        options={{
...
